[tool.poetry]
name = "confident-mcp"
version = "0.1.0"
description = "Confident AI's open-source MCP Server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
uv = ">=0.10.6,<0.11.0"
mcp = { version = ">=1.26.0,<2.0.0", extras = ["cli"] }
openai = "^2.24.0"
fastapi = "^0.135.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"